updated to Java 15; fixed POM